2004-04-11  Marco Gerards  <metgerards@student.han.nl>

	* wortel.c (serve_requests): Initialize from specifier.

2004-04-11  Marcus Brinkmann  <marcus@gnu.org>

	* wortel.c (serve_bootstrap_requests): Initialize from specifier.
	Reported by Marco Gerards.

	* Makefile.am (wortel_SOURCES): Add startup-bin.S.
	(noinst_PROGRAMS): Add startup.
	(STARTUP_ARCH_SOURCES): New variable.
	(startup_CPPFLAGS, startup_SOURCES, startup_LDFLAGS)
	(startup_LDADD): New variables.
	* startup-bin.S, ia32-startup.S, startup.c: New files.
	* wortel.c (startup_bin_start, startup_bin_end): New declarations.
	(STARTUP_LOAD_ADDR): New macro.
	(start_task): New function.
	(WORTEL_MSG_GET_TASK_CAP): New macro.
	(serve_bootstrap_requests): Implement the first half of the
	WORTEL_MSG_GET_TASK_CAP RPC.

2004-04-10  Marcus Brinkmann  <marcus@gnu.org>

	* wortel.h (struct wortel_module): New member task_id.
	(enum wortel_module_type): New modules MOD_DEVA and
	MOD_DEVA_STORE.
	(MOD_IS_TASK): New macro.
	* wortel.c: Include <assert.h>, <l4/thread-start.h> and
	<l4/pagefault.h> Throughout the whole file, use map items instead
	of grant items, use L4_FPAGE_SPAN_MAX instead MAX_FPAGES, and use
	l4_fpage_span instead make_fpages.
	(mod_names): Add names for MOD_DEVA and MOD_DEVA_STORE.
	(MAX_FPAGES): Removed.
	(make_fpages): Removed.
	(start_components): Split up into ...
	(setup_components): ... this new function ...
	(start_physmem): ... and this.
	(serve_bootstrap_requests): Rewrite the container creation.
	(main): Call setup_components and start_physmem instead
	start_components.
	
2004-04-09  Marcus Brinkmann  <marcus@gnu.org>

	* wortel.c (serve_bootstrap_requests): Replace start and end in
	the WORTEL_MSG_GET_CAP_REQUEST reply with startup.
	(physmem_master): Change type to hurd_cap_handle_t.
	(hurd_task_id_t): Remove typedef.
	(HURD_TASK_ID_NULL): Remove macro.

	* wortel.h: Include <hurd/types.h>, not <hurd/caps.h>.
	(struct wortel_module): New member startup and startup_cont.